terraform-aws/modules/web_sg/main.tf
resource "aws_security_group" "web_sg" {
    name = "${var.name}-${var.environment}-web"
    description = "Security Group ${var.name}-${var.environment}"
    vpc_id = var.vpc_id
    tags {
      Name = "${var.name}-${var.environment}-web"
      environment =  var.environment
    }
    // allows traffic from the SG itself
    ingress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        self = true
    }

    // allow traffic for TCP 80
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = [var.source_cidr_block]
    }

    // allow traffic for TCP 443
    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = [var.source_cidr_block]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }  
}

output "web_sg_id" {
  value = aws_security_group.web_sg.id
}
